bk_ida/gccida/c2/constrain_operands
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:2796:4: error: expected ';' after expression
rtx v17; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:2796:5: error: use of undeclared identifier 'v17'
rtx v17; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:2797:4: error: expected ';' after expression
rtx v18; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:2797:5: error: use of undeclared identifier 'v18'
rtx v18; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:2822:4: error: expected ';' after expression
rtx v43; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:2822:5: error: use of undeclared identifier 'v43'
rtx v43; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:2834:32: error: use of undeclared identifier 'recog_data_0'
n_operands = ( unsigned __int8)recog_data_0.n_operands; 
                               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:2836:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !recog_data_0.n_operands || !recog_data_0.n_alternatives ) 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:2836:35: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !recog_data_0.n_operands || !recog_data_0.n_alternatives ) 
                                  ^~~~~~~~~~~~
                                  recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:2838:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:2840:41: error: use of undeclared identifier 'recog_data_0'
memset( s, 255, 4LL * ( unsigned __int8)recog_data_0.n_operands); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:2841:15: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
memcpy( dest, recog_data_0.constraints, 8 * n_operands); 
              ^~~~~~~~~~~~
              recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:2854:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
rtx = recog_data_0.operand[v3]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:2884:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v11), 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:2884:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v11), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:2886:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v9)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:2943:1: error: use of undeclared identifier 'v17'
v17 = recog_data_0.operand[v14]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:2943:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v17 = recog_data_0.operand[v14]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/recog.c:2944:1: error: use of undeclared identifier 'v18'
v18 = recog_data_0.operand[v3]; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constrain_operands/src/obj/recog.o] Error 1
